[package]
name = "obric-v2-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jupiter-amm-interface = "0.2.1"
obric-solana = {path="../accounts/programs/obric-solana"}
anchor-lang = "0.27.0"
anchor-spl = "0.27.0"
anyhow = "1.0"
solana-sdk = "1.14.11"
solana-client = "1.14.11"
getrandom = "0.2.10"
rust_decimal = "1.26.1"

[dev-dependencies]
num = "0.4.0"
