[package]
name = "obric-v3-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jupiter-amm-interface = "0.2.1"
# jupiter-amm-interface = { git = "https://github.com/mgild/jupiter-amm-interface", rev = "caf4b9b" }
larix-lending = {git='https://github.com/ProjectLarix/larix-lending.git'}
obric-solana-v3 = {path='../accounts/programs/obric-solana-v3'}
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
anyhow = "1.0"
solana-sdk = "1.18,<2"
solana-client = "1.18,<2"
getrandom = "0.2.10"

[dev-dependencies]
num = "0.4.0"
